[package]
name = "mesh-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git="https://github.com/yewstack/yew", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
gloo = "0.8.0"
web-sys = "0.3.60"